# scrap

./: Cargo.toml  justfile
src/: main.rs
