[package]
name = "scrap"
version = "0.1.0"
authors = ["m3y <ma3ya.ozw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.2"
clap = "3.0.0-beta.2"
log = "0.4.13"
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.5"
url = "2.2.0"
